Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 2.4.0
-
None
-
Windows Vista x64
-
9731955918b8a0d5d7c1dd8c6987e2d953a9edeb
Description
- Open project tests\manual\debugger\simple\simple.pro from Creator's sources.
- Open simple_test_app.cpp.
- Right-click on a Qt class-name.
- Click "Open Type Hierarchy".
Creator crashes in line 104 of src\libs\cplusplus\TypeHierarchyBuilder.cpp:const QString &typeName = _overview.prettyName(namedType->name());
namedType is NULL and there you go...