C++: Fix crash in type hierarchy when anonymous in typedefs

Task-number: QTCREATORBUG-6445

Change-Id: If62745b58cad330c1f6a8605a444ec13644a1f20
Reviewed-by: Christian Kamm <christian.d.kamm@nokia.com>